<resources>
    <string name="locale">En</string>
    <string name="commun">commun</string>
    <string name="action_settings">Settings</string>
    <string name="notification_channel_description">Commun notification</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="digit0">0</string>
    <plurals name="formatter_followers_formatted">
        <item quantity="zero">{0}{1} Followers</item>
        <item quantity="one">{0}{1} Follower</item>
        <item quantity="other">{0}{1} Followers</item>
    </plurals>
    <plurals name="formatter_posts_formatted">
        <item quantity="zero">{0}{1} Posts</item>
        <item quantity="one">{0}{1} Post</item>
        <item quantity="other">{0}{1} Posts</item>
    </plurals>
    <plurals name="formatter_points_formatted">
        <item quantity="zero">{0}{1} points</item>
        <item quantity="other">{0}{1} points</item>
    </plurals>
    <plurals name="plural_points_formatted_post">
        <item quantity="zero">points</item>
        <item quantity="one">point</item>
        <item quantity="other">points</item>
    </plurals>
    <plurals name="plural_donations">
        <item quantity="zero">donations</item>
        <item quantity="one">donation</item>
        <item quantity="other">donations</item>
    </plurals>
    <string name="common_general_error">Unfortunately, an error was encountered during the operation.</string>
    <string name="token_receiving_error">Can\'t receive a token. The operation has been canceled</string>
    <string name="account_registered_error">Account already registered</string>
    <string name="password_not_match_error">The passwords do not match</string>
    <string name="common_captcha_error">Can\'t receive a captcha</string>
    <string name="common_error_operation_canceled">The operation has been canceled</string>
    <string name="common_error_account_registered">Account already registered</string>
    <string name="export_general_error">An error occurred during the export process.</string>
    <string name="phone_already_taken_error">This phone is already registered</string>
    <string name="email_already_taken_error">This email is already registered</string>
    <string name="name_already_taken_error">Name is already in use</string>
    <string name="wrong_verification_code_error">Wrong verification code</string>
    <string name="write_to_blockchain_error">Can\'t save the user to blockchain</string>
    <string name="too_many_retries_error">Too many retries</string>
    <string name="try_later_error">The operation is canceled. Try again later</string>
    <string name="auth_error">Authentication failed</string>
    <string name="post_edit_invalid_url">The link is not valid.</string>
    <string name="post_edit_invalid_resource_type">The type of the resource, described by the link, is not supported.</string>
    <string name="verification_code_resent">A verification code has been resent</string>
    <string name="hint_search">Search</string>
    <string name="communities">Communities</string>
    <string name="notifications">Notifications</string>
    <string name="wallet">Wallet</string>
    <string name="editor_widget_caption">What’s new?</string>
    <string name="trending">Trending</string>
    <string name="my_feed">My feed</string>
    <string name="my_feed_community">My Feed</string>
    <string name="sort">Sort:</string>
    <string name="sort_hot">Hot</string>
    <string name="sort_new">New</string>
    <string name="sort_popular">Popular</string>
    <string name="sort_top">Top</string>
    <string name="filter_time_24hr">Past 24 hours</string>
    <string name="filter_time_week">Past week</string>
    <string name="filter_time_month">Past month</string>
    <string name="filter_time_all">All time</string>
    <string name="report_send">@string/send</string>
    <string name="report_title">Please select a problem</string>
    <string name="report_spam">Spam</string>
    <string name="report_harassment">Harassment</string>
    <string name="report_nudity">Nudity</string>
    <string name="report_violence">Violence</string>
    <string name="report_false_news">False News</string>
    <string name="report_terrorism">Terrorism</string>
    <string name="report_hate_speech">Hate Speech</string>
    <string name="report_unauthorized_sales">Unauthorized Sales</string>
    <string name="report_message">If someone is in immediate danger, call local emergency services. Do not wait.</string>
    <string name="report_breaks_community_rules">It breaks community rules</string>
    <string name="report_attempt_to_abuse">Attempt to abuse</string>
    <string name="report_other">Other</string>
    <string name="report_other_reason">Please enter a reason</string>
    <string name="report_to">Report to</string>
    <string name="hint_add_comment">Add a comment…</string>
    <string name="now_happened">Just now</string>
    <string name="ago">back</string>
    <string name="reply">Reply</string>
    <string name="comments_more">More</string>
    <string name="comment_answer">Answer</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="start_and_get">Start and get 30 points</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_slides_text_0_0">Welcome\n</string>
    <string name="welcome_slides_text_0_1">to Commun /</string>
    <string name="welcome_slides_text_1">All-in-One\n</string>
    <string name="welcome_slides_text_1_1">social network</string>
    <string name="welcome_slides_text_2">Monetize\n</string>
    <string name="welcome_slides_text_2_1">your socialization</string>
    <string name="welcome_slides_text_3">Owned</string>
    <string name="welcome_slides_text_3_1">by users</string>
    <string name="account_query">Don\'t have an account?</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="welcome_slides_sub_text_1">Blockchain-based social network where you get rewards for posts, comments and likes</string>
    <string name="welcome_slides_sub_text_2">Choose communities of interest and be rewarded for your actions</string>
    <string name="welcome_slides_sub_text_4">Commun has no single owner\nand fully belongs to its members</string>
    <string name="login">Login</string>
    <string name="key">Key</string>
    <string name="ok">Ok</string>
    <string name="sign_in_scan_qr">Scan QR</string>
    <string name="sign_in_scan_qr_hint">Go to commun.com and scan QR</string>
    <string name="sign_in_scan_qr_invalid_format">Invalid code format</string>
    <string name="sign_in_scan_qr_detector_error">An error occurred while scanning the code</string>
    <string name="qr_no_camera_permissions">You need permissions to a camera for scanning qr-code. Open the application settings and grant permission.</string>
    <string name="create_post">Create Post</string>
    <string name="you_will_post_in">You will post in</string>
    <string name="title">Title</string>
    <string name="enter_text">Enter text…</string>
    <string name="select_text_color">Select text color</string>
    <string name="enter_tag">Enter a tag</string>
    <string name="enter_user_name">Enter a user name</string>
    <string name="enter_link">Enter a link</string>
    <string name="link_text">Link text</string>
    <string name="link">Link</string>
    <string name="write_text_with_points">Write text…</string>
    <string name="error_post_empty">Post can\'t be empty</string>
    <string name="error_post_too_long">The post length is too long</string>
    <string name="title_is_required">Title can\'t be empty</string>
    <string name="error_upload_file">Unfortunately, an error was encountered during the file uploading.</string>
    <string name="adult_only">18+</string>
    <string name="post_button">Post</string>
    <string name="select_country">Select country</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Your email address</string>
    <string name="enter_code">Enter code</string>
    <string name="phone_format">+%1$s (___) ___-__-__</string>
    <string name="phone_prefix_format">+%1$s (</string>
    <string name="phone_verification">Phone verification</string>
    <string name="email_verification">Email verification</string>
    <string name="enter_sms_code">Enter SMS-Code</string>
    <string name="enter_email_code">An email has been sent with the verification code. Please enter the code here</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="resend_verification_code_w_time_format">Resend verification code 0:%1$02d</string>
    <string name="next">Next</string>
    <string name="create_your_username">Create your username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keys_format">Master Password\n%1$s\n\nUser\'s name\n%2$s\n\nUser\'s ID\n%7$s\n\nOwner key\n%3$s\n\nActive
        key\n%4$s\n\nPosting key\n%5$s\n\nMemo key\n%6$s
    </string>
    <string name="keys_saved_successfully">Keys saved successfully</string>
    <string name="setup_passcode">Set up Passcode</string>
    <string name="add_short_pin">Add short PIN code</string>
    <string name="user_name_short">Username cannot be shorter than 5 characters</string>
    <string name="user_name_contain_characters">You must use latin letters in lower case, numbers, dot and dash</string>
    <string name="user_name_begin_not_correct">Username can\'t start with a dash</string>
    <string name="user_name_end_not_correct">Username can\'t end with a dash</string>
    <string name="user_name_begin_not_correct_dot">Username can\'t start with a dot</string>
    <string name="user_name_end_not_correct_dot">Username can\'t end with a dot</string>
    <string name="user_name_two_dot">Username can\'t have two consecutive dot characters</string>
    <string name="user_name_two_dash">Username can\'t have two consecutive dash characters</string>
    <string name="user_name_two_dash_dot">Username can\'t have two consecutive dash and dot characters</string>
    <string name="user_name_short_new">Username cannot be shorter than {0} characters</string>
    <string name="user_name_long_new">Username cannot exceed {0} characters</string>
    <string name="password_name_short">Password cannot be shorter than {0} characters</string>
    <string name="password_name_long">Password cannot exceed {0} characters</string>
    <string name="sign_up_description">By clicking the “Next” button, you agree to the</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="clear">Clear</string>
    <string name="reward">Reward</string>
    <string name="transfer">Transfer</string>
    <string name="password_validation_lower">a</string>
    <string name="password_validation_lower_hint">Lower case</string>
    <string name="password_validation_upper">A</string>
    <string name="password_validation_upper_hint">Upper case</string>
    <string name="password_validation_number">1</string>
    <string name="password_validation_number_hint">Number</string>
    <string name="password_validation_min_len_hint">Min length</string>
    <string name="upvote">Upvote</string>
    <string name="mention">Mention</string>
    <string name="subsribe">Subsribe</string>
</resources>