<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lowerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_validation_lower"

        style="@style/Text22.Grey.SingleLine"

        app:layout_constraintEnd_toStartOf="@+id/guideline25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upperLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/password_validation_upper"

        style="@style/Text22.Grey.SingleLine"

        app:layout_constraintEnd_toStartOf="@+id/guideline50"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toTopOf="@+id/lowerLabel" />

    <TextView
        android:id="@+id/numberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/password_validation_number"

        style="@style/Text22.Grey.SingleLine"

        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline50"
        app:layout_constraintTop_toTopOf="@+id/upperLabel" />

    <TextView
        android:id="@+id/minLenLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text=""
        tools:text="8+"

        style="@style/Text22.Grey.SingleLine"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/numberLabel" />

    <TextView
        android:id="@+id/lowerHintLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        style="@style/Text12.Grey.SingleLine"

        android:text="@string/password_validation_lower_hint"
        app:layout_constraintEnd_toEndOf="@+id/lowerLabel"
        app:layout_constraintStart_toStartOf="@+id/lowerLabel"
        app:layout_constraintTop_toBottomOf="@+id/lowerLabel" />

    <TextView
        android:id="@+id/upperHintLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/password_validation_upper_hint"
        style="@style/Text12.Grey.SingleLine"

        app:layout_constraintEnd_toEndOf="@+id/upperLabel"
        app:layout_constraintStart_toStartOf="@+id/upperLabel"
        app:layout_constraintTop_toTopOf="@+id/lowerHintLabel" />

    <TextView
        android:id="@+id/numberHintLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/password_validation_number_hint"
        style="@style/Text12.Grey.SingleLine"

        app:layout_constraintEnd_toEndOf="@+id/numberLabel"
        app:layout_constraintStart_toStartOf="@+id/numberLabel"
        app:layout_constraintTop_toTopOf="@+id/lowerHintLabel" />

    <TextView
        android:id="@+id/minLenHintLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/password_validation_min_len_hint"
        style="@style/Text12.Grey.SingleLine"

        app:layout_constraintEnd_toEndOf="@+id/minLenLabel"
        app:layout_constraintStart_toStartOf="@+id/minLenLabel"
        app:layout_constraintTop_toTopOf="@+id/lowerHintLabel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>